# violit

./: .gitattributes  README.md  README_KOR.md  pyproject.toml  requirements.txt
assets/: demo_violit_showcase.webm
doc/: LLM_REFERENCE.md  Streamlit API Support Matrix.md  llms.txt
examples/01_demo_showcase/: README.md  demo_showcase.py
examples/02_violit_blog/: README.md  README_KOR.md  violit_advanced_blog.py  violit_blog.py
examples/03_multi_db_sqlite_editor/: README.md  demo_multi_db_sqlite_editor.py  hr.db  projects.db
examples/04_llm_chat_application/: demo_app_gemini_agent_highlevel.py  demo_app_gemini_agent_primitive.py  demo_app_gemini_highlevel.py  demo_app_gemini_primitive.py  demo_app_openai_highlevel.py
examples/05_orm/: README.md  demo_orm_app.py  todo.db
examples/06_auth/: auth_demo.db  demo_auth_app.py
examples/07_shared_state/: README.md  shared_state_demo.py
examples/1_demo_showcase/: README.md  demo_showcase.py  old_archive_demo_showcase.py
examples/2_violit_blog/: README.md  README_KOR.md  violit_advanced_blog.py  violit_blog.py
examples/3_multi_db_sqlite_editor/: README.md  demo_multi_db_sqlite_editor.py
examples/4_llm_chat_application/: README.md  _local_violit_bootstrap.py  demo_app_compare_streamlit_agent.py  demo_app_compare_violit_agent.py  demo_app_gemini.py  demo_app_gemini_agent.py  demo_app_gemini_agent_highlevel.py  demo_app_gemini_agent_primitive.py  demo_app_gemini_highlevel.py  demo_app_gemini_primitive.py  demo_app_openai.py  demo_app_openai_highlevel.py  demo_app_openai_primitive.py
examples/5_orm/: README.md  demo_orm_app.py
examples/6_auth/: README.md  demo_auth_app.py
examples/7_shared_state/: shared_state_demo.py
examples/99_github_issues/: github_issue_22_reactive_slider_text_and_expander_title.py  github_issue_23_button_full_width_in_expander.py  github_issue_24_function_vs_main_rendering.py  github_issue_25_styling_over_multicolumn.py  github_issue_27_dataframe_functions.py  github_issue_28_data_editor_edit_results_and_row_delete.py  github_issue_30_expander_open_state_on_dataframe_update.py  github_issue_30_repro_vs_minimal_fix.py  github_issue_99_codeblock.py
src/violit/: __init__.py  app.py  app_assets.py  app_launcher.py  app_runtime.py  app_shell.py  app_support.py  app_template.py  auth.py  background.py  broadcast.py  broadcast_primitives.py  cli.py  component.py  context.py  db.py  engine.py  state.py  style_utils.py  theme.py
src/violit/static/runtime/: violit_app_runtime.js
src/violit/widgets/: __init__.py  card_widgets.py  chart_widgets.py  chat_widgets.py  custom_widgets.py  data_widgets.py  form_widgets.py  input_widgets.py  layout_widgets.py  list_widgets.py  media_widgets.py  status_widgets.py  text_widgets.py  ui_widgets.py
