[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "violit"
version = "0.7.14"
description = "Violit: Faster than Light, Beautiful as Violet. Pure Python Web Framework. Streamlit simplicity, no reruns."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Violit Team", email = "violit.company@gmail.com"}, 
]
keywords = [
    "web",
    "framework",
    "streamlit",
    "dashboard",
    "ui",
    "fastapi",
    "reactive",
    "zero-rerun",
    "webawesome",
    "websocket",
    "data-science"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.24",
    "pywebview>=5.4",
    "cachetools>=5.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.24.0",
    "matplotlib>=3.10.0",
    "jinja2>=3.1.6",
    "websockets>=15.0",
    "bcrypt>=4.3.0",
    "sqlmodel>=0.0.21",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0"
]

[project.scripts]
violit = "violit.cli:main"

[project.urls]
Homepage = "https://violit.cloud"
Documentation = "https://doc.violit.cloud"
Repository = "https://github.com/violit-dev/violit"
Issues = "https://github.com/violit-dev/violit/issues"

[tool.setuptools.packages.find]
where = ["src"] 
include = ["violit*"]